--- a/merger.html
+++ b/merger.html
@@ -5,11 +5,11 @@
  <style>
      .flex-container {
       display: flex;  flex-direction:row;
-      background-color: red;
+      background-color: orange;
   }
 
 .flex-container > div {  /*div children of the flex container*/
-  background-color: #f1f1f1; 
+  background-color: lightcyan; 
   margin: 10px;  padding: 20px;  font-size: 30px;
 }
 
@@ -20,12 +20,61 @@
 		 background-color: green;
 	  }
 	}
+	body {
+      margin-left: 15px;
+    }
+	h1 {
+        text-shadow: 2px 2px 8px blue;
+        text-decoration: underline;
+    }
+	p {
+		font-family:Arial, Helvetica, sans-serif
+	}
+	.button {
+  transition-duration: 0.4s;
+  height: 28px;
+  width:80px;
+  font-family:cursive;
+  box-shadow: 0 15px 25px 0 rgba(0,0,0,0.2), 0 15px 30px 0 rgba(0,0,0,0.19);
+}
+
+.button:hover {
+  background-color: #4CAF50; 
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.button1 {
+  transition-duration: 0.4s;
+  height: 28px;
+  width:80px;
+  font-family:cursive;
+  box-shadow: 0 15px 25px 0 rgba(0,0,0,0.2), 0 15px 30px 0 rgba(0,0,0,0.19);
+}
+
+.button1:hover {
+  background-color: blue;
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.button2 {
+  transition-duration: 0.4s;
+  height: 28px;
+  width:80px;
+  font-family:cursive;
+  box-shadow: 0 15px 25px 0 rgba(0,0,0,0.2), 0 15px 30px 0 rgba(0,0,0,0.19);
+}
+
+.button2:hover {
+  background-color: red;
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
 </style>
     </head>
 <body>
 	<h1>Maheswar Reddy Polam builds a merger</h1>
 
-	<input type="text" id="textInput" placeholder="Enter text...">
+	<input type="text" id="textInput" placeholder="Enter text..."> <br> <br>
 	<div class="flex-container" id="target">
 	  <div class="merger">row item 1</div>   
 	  <div class="merger">row item 2</div>  
@@ -34,6 +83,49 @@
 
 <p> Press the button to create an new element of type div and then add it to the container.
 	</p>
-	<input type ="button" id ="addEndButton"  value ="Add end">
+	<input type ="button" class="button" id ="addEndButton"  value ="Add end">
+	<input type ="button" class="button1" id ="addFrontButton"  value ="Add Front">
+	<input type ="button" class="button2" id ="removeButton"  value ="Remove">
+
+
 </body>
+<script>
+
+	document.getElementById("addEndButton").addEventListener("click", function () {
+	
+	var inputValue = document.getElementById("textInput").value;
+
+	var newDiv = document.createElement("div");
+
+	newDiv.innerHTML = inputValue;
+
+	newDiv.className = "merger";
+
+	document.querySelector(".flex-container").appendChild(newDiv);
+});
+
+document.getElementById("removeButton").addEventListener("click", function () {
+	
+		var mergerItems = document.getElementsByClassName("merger");
+
+		var length = mergerItems.length;
+
+		if (length > 0) {
+			var middleIndex = Math.floor(length / 2);
+			mergerItems[middleIndex].remove();
+		}
+	});
+
+	document.getElementById("addFrontButton").addEventListener("click", function () {
+	
+		var inputValue = document.getElementById("textInput").value;
+		var newDiv = document.createElement("div");
+		newDiv.innerHTML = inputValue;
+		newDiv.className = "merger";
+
+		var container = document.querySelector(".flex-container");
+
+		container.insertBefore(newDiv, container.firstChild);
+	});
+</script>
 </html>	
