--- a/merger.html
+++ b/merger.html
@@ -69,12 +69,15 @@
   color: white;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+.border{
+    border-radius: 50px 20px;  
+     }
 </style>
     </head>
 <body>
 	<h1>Maheswar Reddy Polam builds a merger</h1>
 
-	<input type="text" id="textInput" placeholder="Enter text..."> <br> <br>
+	<input type="text" id="textInput" class="border border border-dark" placeholder=" Enter text..."> <br> <br>
 	<div class="flex-container" id="target">
 	  <div class="merger">row item 1</div>   
 	  <div class="merger">row item 2</div>  
