--- a/react.html
+++ b/react.html
@@ -12,6 +12,7 @@
     .btnclr {
       color: green;
       font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      box-shadow: 0 15px 25px 0 rgba(0,0,0,0.2), 0 15px 30px 0 rgba(0,0,0,0.19);
     }
     body {
       margin-left: 15px;
@@ -20,17 +21,21 @@
         text-shadow: 2px 2px 8px orangered;
         text-decoration: underline;
     }
+    body {
+      text-align: center;
+      background-color:cornsilk;
+    }
   </style>
 </head>
 <body>
 
   <h1>Maheswar Reddy Polam speed check</h1>
 
-     
-    <div id="target">Your Time</div>
+     <br>
+    <div id="target">Your Time</div> 
     <div id="counter">Count</div>
 
-
+<br> 
   <input id ="start-button" class="btnclr" type="button" value="Start Timer">
   <input id="react-button" class="btnclr" type ="button" value="React">
   
