--- a/merger.html
+++ b/merger.html
@@ -28,7 +28,7 @@
         text-decoration: underline;
     }
 	p {
-		font-family:Arial, Helvetica, sans-serif
+		font-family:Arial, Helvetica, sans-serif;
 	}
 	.button {
   transition-duration: 0.4s;
