--- a/pirate.html
+++ b/pirate.html
@@ -42,29 +42,7 @@ margin: 0px;}
 .col img {
   margin-top: 8px;
   vertical-align: middle;
-}
-#locations, #penalty, #help {
-         font-weight: bold;
-         border-top-style: dotted;
-         border-right-style: solid;
-         border-bottom-style: dotted;
-         border-left-style: solid;
-        }
-      #locations {
-        color: blue;
-        cursor: pointer;
-      }
-        #help {
-            color: green;
-            cursor: pointer;
-        }
-        #penalty {
-            color: greenyellow;
-            cursor: pointer;
-        }
-
-
-   
+}   
 </style>
 </head>
 <body>
@@ -94,7 +72,7 @@ margin: 0px;}
             <div class="col"><img id ='7' src="./hidtreasure.webp" alt="Location" onclick = "check(7)" height="80px" width="80px"></div>
             <div class="col"><img id ='8' src="./hidtreasure.webp" alt="Location" onclick = "check(8)" height="80px" width="80px"></div>
             <div class="col"><img id ='9' src="./hidtreasure.webp" alt="Location" onclick = "check(9)" height="80px" width="80px"></div>
-       
+       </div>
         <div class="row row-cols-auto" >
             <div class="col"><img id ='10' src="./hidtreasure.webp" alt="Location" onclick = "check(10)" height="80px" width="80px"></div>
             <div class="col"><img id ='11' src="./hidtreasure.webp" alt="Location" onclick = "check(11)" height="80px" width="80px"></div>
